--- a/client/src/assets/styles/index.css
+++ b/client/src/assets/styles/index.css
@@ -1,69 +1,102 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+@theme{
+  --color-primary: #F7F7F7;
+  --color-secondary: #272727;
+  --color-accent: #251468;
+  --color-green: #078347;
+  --color-black: #181C14;
+  --color-white: #FFFFFF;
+  --color-red: #E52020;
+  --color-blue: #161D6F;
+  --color-gray: #B0B0B0;
+  /* Typography */
+  --font-poppins: 'Poppins', sans-serif;
+  --font-roboto: 'Roboto', sans-serif;
+  /* Font sizes */
+  --font-size-sm: clamp(0.875rem, 0.7813rem + 0.25vw, 1rem);
+  --font-size-md: clamp(1rem, 0.875rem + 0.25vw, 1.125rem);
+  --font-size-lg: clamp(1.125rem, 1rem + 0.25vw, 1.25rem);
+  --font-size-xl: clamp(1.25rem, 1.125rem + 0.25vw, 1.375rem);
+  /* Font weights */
+  --font-weight-thin: 100;
+  --font-weight-extralight: 200;
+  --font-weight-light: 300;
+  --font-weight-normal: 400;
+  --font-weight-medium: 500;
+  --font-weight-semibold: 600;
+  --font-weight-bold: 700;
+  --font-weight-extrabold: 800;
+  /* Border radius */
+  --border-radius-xs: 0.125rem;
+  --border-radius-sm: 0.25rem;
+  --border-radius-md: 0.375rem;
+  --border-radius-lg: 0.5rem;
+  --border-radius-xl: 0.75rem;
+  --border-radius-2xl: 1rem;
+  --border-radius-3xl: 1.5rem;
+  /* Box shadow */
+  --box-shadow-xs: 0 1px 2px rgba(0, 0, 0, 0.05);
+  --box-shadow-sm: 0 1px 3px rgba(0, 0, 0, 0.1);
+  --box-shadow-md: 0 4px 6px rgba(0, 0, 0, 0.1);
+  --box-shadow-lg: 0 10px 15px rgba(0, 0, 0, 0.1);
+  --box-shadow-xl: 0 20px 25px rgba(0, 0, 0, 0.1);
+  --box-shadow-2xl: 0 25px 50px rgba(0, 0, 0, 0.1);
+  --box-shadow-3xl: 0 35px 60px rgba(0, 0, 0, 0.1);
+  /* Line height */
+  --line-height-xs: 1rem;
+  --line-height-sm: 1.25rem;
+  --line-height-md: 1.5rem;
+  --line-height-lg: 1.75rem;
+  --line-height-xl: 2rem;
+  /* Z-index */
+  --z-index-0: 0;
+  --z-index-10: 10;
+  /* height */
+  --header-height: 4rem;
+  --footer-height: 6rem;
+  --section-height: 100vh;
+  --section-padding: 2rem;
+}
+
+* {
+  scroll-behavior: smooth;
+}
+html {
+  font-size: 16px;
   line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-family: var(--font-poppins);
+  background-color: var(--primary-color);
+  font-size: 1rem;
+  line-height: 1.5;
+  color: var(--black-color);
 }
-
+a {
+  text-decoration: none;
+}
+ul li{
+  list-style: none;
+}
+h1, h2, h3, p{
+  font-family: var(--font-poppins);
+  color: var(--black-color);
+}
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: var(--font-size-xl);
+  font-weight: var(--font-weight-bold);
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+h2 {
+  font-size: var(--font-size-lg);
+  font-weight: var(--font-weight-semibold);
 }
-button:hover {
-  border-color: #646cff;
+h3 {
+  font-size: var(--font-size-md);
+  font-weight: var(--font-weight-medium);
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+p, li{
+  font-size: var(--font-size-sm);
+  font-weight: var(--font-weight-normal);
 }
